[gd_scene load_steps=7 format=3 uid="uid://t0uckwn1kwkd"]

[ext_resource type="Texture2D" uid="uid://bcalgxt2i401x" path="res://assets/objects/building/brackets/2x/texture.png" id="1_j2qxm"]
[ext_resource type="Script" path="res://assets/scripts/interactables/brackets/bracket2x.gd" id="1_lnmxq"]
[ext_resource type="ArrayMesh" uid="uid://dusgwmlh6iymp" path="res://assets/objects/building/brackets/2x/bracket2x.obj" id="2_if8dp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g16s6"]
albedo_texture = ExtResource("1_j2qxm")
texture_filter = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_srk55"]
size = Vector3(0.626466, 0.126118, 0.249688)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_4s2lq"]
height = 0.300446
radius = 0.101414

[node name="bracket2x" type="RigidBody3D"]
continuous_cd = true
can_sleep = false
script = ExtResource("1_lnmxq")

[node name="brack_texture" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_g16s6")
mesh = ExtResource("2_if8dp")

[node name="brack_shape" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_srk55")

[node name="brack_attach_1" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.187246, 0, 0)
collision_mask = 0
monitoring = false

[node name="attach_shape" type="CollisionShape3D" parent="brack_attach_1"]
shape = SubResource("CylinderShape3D_4s2lq")

[node name="brack_attach_2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.191273, 0, 0)
collision_mask = 0
monitoring = false

[node name="attach_shape" type="CollisionShape3D" parent="brack_attach_2"]
shape = SubResource("CylinderShape3D_4s2lq")

[connection signal="area_entered" from="brack_attach_1" to="." method="_on_attach_1_entered"]
[connection signal="area_exited" from="brack_attach_1" to="." method="_on_attach_1_exited"]
[connection signal="area_entered" from="brack_attach_2" to="." method="_on_attach_2_entered"]
[connection signal="area_exited" from="brack_attach_2" to="." method="_on_attach_2_exited"]
